--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <!--To be implemented -->
 
   <!-- Meta Tags for SEO -->
-  <title>Shun Lin | Engineering + Medicine </title>
-  <meta name='subject' content='Shun Lin' />
-  <meta name='description' content="Welcome to the personal website for Shun Lin.  Shun a second year studying EECS (Electrical Engineering and Computer Science), at the University of California, Berkeley.  Shun is passionate in computer science and its application in medical devices.  Shun holds various leadership positions in students organization at UC Berkeley." />
-  <meta name='keywords' content='Shun Lin, Shun Lin Berkeley, Shun, Lin, Berkeley, Shun Lin EECS, Shun Lin EECS Berkeley, Berkeley Shun Lin' />
-  <meta name='reply-to' content='shun_lin@berkeley.edu' />
-  <meta name='copyright' content='Shun Lin' />
+  <title>Michelle Huang | Business, Consulting, Law</title>
+  <meta name='subject' content='Michelle Huang' />
+  <meta name='description' content="Welcome to the personal website for Michelle Huang.  Michelle a second year studying EECS (Electrical Engineering and Computer Science), at the University of California, Berkeley.  Michelle is passionate in computer science and its application in medical devices.  Michelle holds various leadership positions in students organization at UC Berkeley." />
+  <meta name='keywords' content='Michelle Huang, Michelle Huang Berkeley, Michelle, Huang, Berkeley, Michelle Huang EECS, Michelle Huang EECS Berkeley, Berkeley Michelle Huang' />
+  <meta name='reply-to' content='michelle.r.huang@berkeley.edu' />
+  <meta name='copyright' content='Michelle Huang' />
   <meta name='robots' content='index, follow' />
 
   <!-- FAVICON -->
@@ -76,7 +76,7 @@
   <li><a href="#skills">Skills</a></li>
   <li><a href="#awards">Awards</a></li>
   <li><a href="#contact">Contact</a></li>
-  <li><a href="Shun_Lin_Resume.pdf" target="_blank" class="blue-text text-darken-2"><b>Resume</b></a></li>
+  <li><a href="Michelle_Huang_Resume.pdf" target="_blank" class="blue-text text-darken-2"><b>Resume</b></a></li>
 </ul>
 
 <!--main-navbar-->
@@ -95,7 +95,7 @@
             <li><a class="dropdown-button grey-text text-darken-2" href="#skills">Skills</a></li>
             <li><a class="dropdown-button grey-text text-darken-2" href="#awards">Awards</a></li>
             <li><a class="grey-text text-darken-2" href="#contact">Contact</a></li>
-            <li><a class="waves-effect waves-light btn z-depth-0 blue darken-2" href="Shun_Lin_Resume.pdf" target="_blank">Resume</a></li>
+            <li><a class="waves-effect waves-light btn z-depth-0 blue darken-2" href="Michelle_Huang_Resume.pdf" target="_blank">Resume</a></li>
           </ul>
       </div>
     </nav>
@@ -106,12 +106,11 @@
   <div class="cover-wrapper">
     <div class="cover valign-wrapper">
       <div class="text-container valign center">
-        <h1 class="white-text">Shun Lin</span></h1>
+        <h1 class="white-text">Michelle Huang</span></h1>
         <div class="row">
-          <a class="btn-floating waves-effect waves-light green" href="http://www.shunlin.me"><i class="material-icons">language</i></a>
+          <a class="btn-floating waves-effect waves-light green" href="index.html"><i class="material-icons">language</i></a>
           <a class="btn-floating waves-effect waves-light blue" href="https://www.linkedin.com/in/shun-lin-97505a103" target="_blank"><i class="fa fa-linkedin"></i></a>
-          <a class="btn-floating waves-effect waves-light red" href="mailto:shun_lin@berkeley.edu"><i class="material-icons">email</i></a>
-          <a class="btn-floating waves-effect waves-light black" href="https://github.com/shun-lin" target="_blank"><i class="fa fa-github"></i></a>
+          <a class="btn-floating waves-effect waves-light red" href="mailto:michelle.r.huang@berkeley.edu"><i class="material-icons">email</i></a>
         </div>
         <p class="white-text"> Welcome to my personal website! </p>
       </div>
@@ -133,20 +132,20 @@
                   </div>
               </div>
               <!--intro card-->
-              <div class="card horizontal wow fadeInDown">
+              <div class="card horizontal">
                   <div class="card-image waves-effect waves-block waves-light">
                       <img src="img/shun.jpg"></img>
                   </div>
                   <div class="card-stacked">
                       <div class="card-content">
-                          <p>Hello I'm Shun! I am a second year studying EECS (Electrical Engineering &amp; Computer Science) at UC Berkeley.
+                          <p>Hello I'm Michelle! I am a second year studying EECS (Electrical Engineering &amp; Computer Science) at UC Berkeley.
                              I am passionate about developing useful softwares and beautiful web applications. I love building software that is elegant in style and learning new programming languages and technologies.</p>
                       </div>
                   </div>
               </div>
               <br> </br>
               <!--Software Engineering-->
-              <div class="col s12 m4 wow fadeInLeft">
+              <div class="col s12 m4">
                   <div class="card">
                       <div class="card-image waves-effect waves-block waves-light">
                           <img class="activator" src="img/engineering.jpeg"></img>
@@ -162,7 +161,7 @@
                   </div>
               </div>
               <!--Entrepreneurship-->
-              <div class="col s12 m4 wow fadeInDown">
+              <div class="col s12 m4">
                   <div class="card">
                       <div class="card-image waves-effect waves-block waves-light">
                           <img class="activator" src="img/entrepreneurship.jpg"></img>
@@ -366,7 +365,7 @@
                         </div>
                     </div>
                 </div>
-                <!--Shun Lin Website-->
+                <!--Michelle Huang Website-->
                 <div class="col s12 m6">
                     <div class="card sticky-action">
                         <div class="card-image waves-effect waves-block waves-light">
@@ -493,7 +492,7 @@
                           </div>
                           <div class="card-action">
                               <a class="btn-floating z-depth-0 waves-effect waves-light green" href="https://www.hackerrank.com/s92014721/hackos"><i class="material-icons">language</i></a>
-                              <a class="btn-floating z-depth-0 waves-effect waves-light black" href="https://github.com/shun-lin/Shun_Hackerrank_Solutions/tree/master/Artificial%20Intelligence" target="_blank"><i class="fa fa-github"></i></a>
+                              <a class="btn-floating z-depth-0 waves-effect waves-light black" href="https://github.com/shun-lin/Michelle_Hackerrank_Solutions/tree/master/Artificial%20Intelligence" target="_blank"><i class="fa fa-github"></i></a>
                           </div>
                           <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">AI | Hackerrank Challenges<i class="material-icons right">close</i></span>
@@ -512,7 +511,7 @@
                           </div>
                           <div class="card-action">
                               <a class="btn-floating z-depth-0 waves-effect waves-light green" href="https://leetcode.com/shun_lin/"><i class="material-icons">language</i></a>
-                              <a class="btn-floating z-depth-0 waves-effect waves-light black" href="https://github.com/shun-lin/Shun-LeetCode-OJ-solutions/tree/master/Python" target="_blank"><i class="fa fa-github"></i></a>
+                              <a class="btn-floating z-depth-0 waves-effect waves-light black" href="https://github.com/shun-lin/Michelle-LeetCode-OJ-solutions/tree/master/Python" target="_blank"><i class="fa fa-github"></i></a>
                           </div>
                           <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Python | LeetCode Challenges<i class="material-icons right">close</i></span>
@@ -531,7 +530,7 @@
                           </div>
                           <div class="card-action">
                             <a class="btn-floating z-depth-0 waves-effect waves-light green" href="https://leetcode.com/shun_lin/"><i class="material-icons">language</i></a>
-                            <a class="btn-floating z-depth-0 waves-effect waves-light black" href="https://github.com/shun-lin/Shun-LeetCode-OJ-solutions/tree/master/Java" target="_blank"><i class="fa fa-github"></i></a>
+                            <a class="btn-floating z-depth-0 waves-effect waves-light black" href="https://github.com/shun-lin/Michelle-LeetCode-OJ-solutions/tree/master/Java" target="_blank"><i class="fa fa-github"></i></a>
                           </div>
                           <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Java | LeetCode Challenges<i class="material-icons right">close</i></span>
@@ -551,7 +550,7 @@
                           </div>
                           <div class="card-action">
                             <a class="btn-floating z-depth-0 waves-effect waves-light green" href="https://leetcode.com/shun_lin/"><i class="material-icons">language</i></a>
-                            <a class="btn-floating z-depth-0 waves-effect waves-light black" href="https://github.com/shun-lin/Shun-LeetCode-OJ-solutions/tree/master/C" target="_blank"><i class="fa fa-github"></i></a>
+                            <a class="btn-floating z-depth-0 waves-effect waves-light black" href="https://github.com/shun-lin/Michelle-LeetCode-OJ-solutions/tree/master/C" target="_blank"><i class="fa fa-github"></i></a>
                           </div>
                           <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">C | LeetCode Challenges<i class="material-icons right">close</i></span>
@@ -571,7 +570,7 @@
                           </div>
                           <div class="card-action">
                             <a class="btn-floating z-depth-0 waves-effect waves-light green" href="https://leetcode.com/shun_lin/"><i class="material-icons">language</i></a>
-                            <a class="btn-floating z-depth-0 waves-effect waves-light black" href="https://github.com/shun-lin/Shun-LeetCode-OJ-solutions/tree/master/C++" target="_blank"><i class="fa fa-github"></i></a>
+                            <a class="btn-floating z-depth-0 waves-effect waves-light black" href="https://github.com/shun-lin/Michelle-LeetCode-OJ-solutions/tree/master/C++" target="_blank"><i class="fa fa-github"></i></a>
                           </div>
                           <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">C++ | LeetCode Challenges<i class="material-icons right">close</i></span>
@@ -927,7 +926,7 @@
             <ul>
               <li><a class="grey-text text-lighten-2" href="#experiences">Software Development</a></li>
               <li><a class="grey-text text-lighten-2" href="#experiences">Project Management</a></li>
-              <li><a class="grey-text text-lighten-2" href="Shun_Lin_Resume.pdf" target="_blank">Resume</a></li>
+              <li><a class="grey-text text-lighten-2" href="Michelle_Huang_Resume.pdf" target="_blank">Resume</a></li>
             </ul>
 					</div>
 					<div class="col m3 s12">
@@ -950,7 +949,7 @@
 						<ul>
               <li><a class="grey-text text-lighten-2" href="#contact">Form</a></li>
 							<li><a class="grey-text text-lighten-2" href="mailto:shun_lin@berkeley.edu">Email</a></li>
-							<li><a class="grey-text text-lighten-2" href="https://www.linkedin.com/in/shun-lin-97505a103?trk=pub-pbmap" target="_blank">Linkedin</a></li>
+							<li><a class="grey-text text-lighten-2" href="https://www.linkedin.com/in/shun-lin-97505a103?trk=pub-pbmap" target="_blank">Huangkedin</a></li>
 						</ul>
 					</div>
 				</div>
@@ -961,7 +960,7 @@
 	<div class="container signature">
 		<div class="row">
 			<div class="col offset-m1 s8">
-				<p>&copy; Shun Lin 2017</p>
+				<p>&copy; Michelle Huang 2017</p>
 			</div>
 		</div>
 	</div>
