--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <!--intro card-->
               <div class="card horizontal">
                   <div class="card-image waves-effect waves-block waves-light">
-                      <img src="img/shun.jpg"></img>
+                      <img src="img/michelle.jpg"></img>
                   </div>
                   <div class="card-stacked">
                       <div class="card-content">
