--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <h1 class="white-text">Michelle Huang</span></h1>
         <div class="row">
           <a class="btn-floating waves-effect waves-light green" href="index.html"><i class="material-icons">language</i></a>
-          <a class="btn-floating waves-effect waves-light blue" href="https://www.linkedin.com/in/shun-lin-97505a103" target="_blank"><i class="fa fa-linkedin"></i></a>
+          <a class="btn-floating waves-effect waves-light blue" href="https://www.linkedin.com/in/michellerhuang" target="_blank"><i class="fa fa-linkedin"></i></a>
           <a class="btn-floating waves-effect waves-light red" href="mailto:michelle.r.huang@berkeley.edu"><i class="material-icons">email</i></a>
         </div>
         <p class="white-text"> Welcome to my personal website! </p>
